--- a/css/style.css
+++ b/css/style.css
@@ -384,7 +384,7 @@ a:before, a:after {
 /* Section Dividers Backgrounds */
 
 .divider1 {
-  background-image: url('../img/bg/divider1.jpg')
+  background-image: url('../img/bg/divider_red.jpg')
 }
 
 .divider2 {
